@@ -17,9 +17,10 @@ Configuration::Configuration()
 		exit (-2);
 	}
 
-	V2Path = obj[0]->getLeaf("v2directory");
-	EU3Path = obj[0]->getLeaf("EU3directory");
-	startDate = date(obj[0]->getLeaf("start_date"));
-	gametype = obj[0]->getLeaf("gametype");
-	removetype = obj[0]->getLeaf("removetype");
+	startDate	= date(obj[0]->getLeaf("start_date"));
+	maxLiteracy	= atof(obj[0]->getLeaf("max_literacy").c_str());
+	V2Path		= obj[0]->getLeaf("v2directory");
+	EU3Path		= obj[0]->getLeaf("EU3directory");
+	gametype		= obj[0]->getLeaf("gametype");
+	removetype	= obj[0]->getLeaf("removetype");
 }
