@@ -347,3 +347,4 @@ Revision	Version Updated		Log Message
 332		C++			Merge nations does tech schools right.
 333		C++			Block some tech schools.
 334		C++			Allow culture_tech_school but make traditional_academic a hard default to beat.
+335		C++			Max literacy is defined in configuration.txt.
